--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,12 +19,8 @@
         </label>
 
         <div class="trigger">
-          {% for path in page_paths %}
-            {% assign my_page = site.pages | where: "path", path | first %}
-            {% if my_page.title %}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {% endif %}
-          {% endfor %}
+          <a class="page-link" href="/links">Links</a>
+          <a class="page-link" href="/how_to_guides">How to guides</a>
         </div>
       </nav>
     {% endif %}
