--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,23 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">Posts</h1>
+    <div id="slogan">
+        <h1>ANONCOIN<br>
+        PRIVACY-CENTRIC CURRENCY</h1>
+        </div>
+        
+        
+        
+        <div id="info">
+        <p><span class="highlight">Anoncoin is a privacy-centric currency</span></p>
+        <p><span class="highlight">Fully compatible with the I2P and TOR darknets</span></p>
+        <p><span class="highlight">Anoncoin will be available no matter what the authorities do</span></p>
+        </div>
+        
+        
+        
+
+  <h1 class="page-heading">Blog</h1>
   
   {{ content }}
 
