Update folder setup

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,8 +19,13 @@
         </label>
 
         <div class="trigger">
-          <a class="page-link" href="/links">Links</a>
-          <a class="page-link" href="/how_to_guides">How to guides</a>
+          <a class="page-link" href="/links#about">About</a>
+          <a class="page-link" href="/links#downloads">Downloads</a>
+          <a class="page-link" href="/links#resources">Resources</a>
+          <a class="page-link" href="/blog">Blog</a>
+          <a class="page-link" href="/links#services">Services</a>
+          <a class="page-link" href="/links#community">Community</a>
+          
         </div>
       </nav>
     {% endif %}
