Update pages layout

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -184,6 +184,11 @@ section.success {
     background: #{{ site.color.primary }};
 }
 
+section.success {
+    color: #fff;
+    background: #000;
+}
+
 @media(max-width:767px) {
     section {
         padding: 75px 0;
