Rebrand with the new logo

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,19 +4,20 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-light">
+                    <hr class="star-two">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>ANONCOIN (ANC) IS A UNIQUE DECENTRALIZED PEER TO PEER INTERNET CRYPTOCURRENCY THAT PROVIDES PRIVACY FOR ITS USERS. I2P AND TOR COMPATIBLE, IT IS RESISTANT TO CRACKDOWNS FROM HOSTILE AUTHORITIES.
+                    <p>Anoncoin (trading symbol ANC) is a digital cryptocurrency that focuses on privacy and anonymity for its users. Created in June 2013, it is the first (and currently only) coin that provides built in support for the I2P darknet that makes it impossible to determine the IP address of the user. Anoncoin also has built in support of Tor, which can help conceal your location and keep your internet traffic private.
+                    </p>     
                         
-                        TRANSACTIONS SENT THROUGH THE I2P OR TOR DARKNETS MAKE YOUR LOCATION UNTRACABLE. ZEROCOIN IS BEING DEVELOPED TO PROVIDE TRUE ANONYMITY WITH UNTRACABLE TRANSACTIONS IN THE BLOCK CHAIN.</p>
-                </div>
+                 </div>
                 <div class="col-lg-4">
-                    <p>ANONCOIN WAS RELEASED IN A TRANSPARENT MANNER WITH A FAIR MINING REWARD SCHEDULE. A PRE-MINE OF 4200 ANC WAS RETURNED TO THE COMMUNITY.
-                        
-                        WE OPPOSE ALL FORMS OF CENSORSHIP AND HAVE A LONG HISTORY IN LEADING INTERNET PRIVACY INITIATIVES. WHETHER YOU ARE A JOURNALIST, ACTIVIST, OR DISSIDENT, OR JUST SOMEONE WHO CARES ABOUT PRIVACY, ANONCOIN IS FOR YOU. </p>
+                    <p>
+                The Anoncoin network is maintained by decentralized miners who process transactions into blocks that are added to the public block chain. With the creation of each block, a specific amount of anoncoin is created that is rewarded to the miner. The difficulty of the scrypt proof-of-work algorithm is adjusted to ensure that a block is created about every 3 minutes.</p>
+                            
+                    </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="/Download" class="btn btn-lg btn-outline">
