--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -10,10 +10,11 @@ body {
 
 p {
     font-size: 20px;
+    color: #{{ site.color.primary }};
 }
 
 p.small {
-    font-size: 16px;
+    font-size: 16px; 
 }
 
 a,
@@ -22,8 +23,13 @@ a:focus,
 a:active,
 a.active {
     outline: 0;
-    color: #{{ site.color.primary }};
+    color: #{{ site.color.secondary }};
+    text-decoration: underline;
 }
+
+A.navbar-brand:link  {text-decoration: none;}
+A.dropdown-toggle:link  {text-decoration: none;}
+
 
 h1,
 h2,
@@ -36,6 +42,7 @@ h6 {
 }
 
 hr.star-light,
+hr.star-two,
 hr.star-primary {
     margin: 25px auto 30px;
     padding: 0;
@@ -46,6 +53,7 @@ hr.star-primary {
 }
 
 hr.star-light:after,
+hr.star-two:after,
 hr.star-primary:after {
     content: "\f005";
     display: inline-block;
@@ -56,8 +64,14 @@ hr.star-primary:after {
     font-size: 2em;
 }
 
-hr.star-light {
+hr.star-light,
+hr.star-two {
     border-color: #fff;
+}
+
+hr.star-two:after {
+    color: #fff;
+    background-color: #{{ site.color.thirdly }};
 }
 
 hr.star-light:after {
@@ -180,12 +194,12 @@ section h2 {
 
 section.success {
     color: #fff;
-    background: #{{ site.color.primary }};
+    background: #{{ site.color.thirdly }};
 }
 
 section.success {
     color: #fff;
-    background: #000;
+    background: #{{ site.color.thirdly }};
 }
 
 @media(max-width:767px) {
@@ -196,57 +210,6 @@ section.success {
     section.first {
         padding-top: 75px;
     }
-}
-
-#portfolio .portfolio-item {
-    right: 0;
-    margin: 0 0 15px;
-}
-
-#portfolio .portfolio-item .portfolio-link {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-    max-width: 400px;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    background: rgba({{ site.color.primary-rgb }},.9);
-    -webkit-transition: all ease .5s;
-    -moz-transition: all ease .5s;
-    transition: all ease .5s;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption:hover {
-    opacity: 1;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    height: 20px;
-    margin-top: -12px;
-    text-align: center;
-    font-size: 20px;
-    color: #fff;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
-    margin-top: -12px;
-}
-
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
-    margin: 0;
-}
-
-#portfolio * {
-    z-index: 2;
 }
 
 @media(min-width:767px) {
@@ -389,64 +352,7 @@ footer .footer-below {
     outline: 0;
 }
 
-.portfolio-modal .modal-content {
-    padding: 100px 0;
-    min-height: 100%;
-    border: 0;
-    border-radius: 0;
-    text-align: center;
-    background-clip: border-box;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
 
-.portfolio-modal .modal-content h2 {
-    margin: 0;
-    font-size: 3em;
-}
-
-.portfolio-modal .modal-content img {
-    margin-bottom: 30px;
-}
-
-.portfolio-modal .modal-content .item-details {
-    margin: 30px 0;
-}
-
-.portfolio-modal .close-modal {
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    width: 75px;
-    height: 75px;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.portfolio-modal .close-modal:hover {
-    opacity: .3;
-}
-
-.portfolio-modal .close-modal .lr {
-    z-index: 1051;
-    width: 1px;
-    height: 75px;
-    margin-left: 35px;
-    background-color: #{{ site.color.secondary }};
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-.portfolio-modal .close-modal .lr .rl {
-    z-index: 1052;
-    width: 1px;
-    height: 75px;
-    background-color: #{{ site.color.secondary }};
-    -webkit-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
-}
 
 .navbar-nav>.active>a {
     background-color: #{{ site.color.secondary-dark }} !important;
