--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/anoncoin-logo@2x.png" alt="">
+                    <img class="img-responsive" src="img/anoncoin_logo.png" alt="">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
