--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,11 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>{{ site.footer.credits }}</h3>
-                        <p>{{ site.credits }}</p>
+                        <p>
+                            {% for credits in site.credits %}
+                            {{ credits.line }} <br>
+                            {% endfor %}
+                        </p>
                     </div>
                 </div>
             </div>
