--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,29 +1,35 @@
- <!-- About Section -->
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-two">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Anoncoin (trading symbol ANC) is a digital cryptocurrency that focuses on privacy and anonymity for its users. Created in June 2013, it is the first (and currently only) coin that provides built in support for the I2P darknet that makes it impossible to determine the IP address of the user. Anoncoin also has built in support of Tor, which can help conceal your location and keep your internet traffic private.
-                    </p>     
-                        
-                 </div>
-                <div class="col-lg-4">
-                    <p>
-                The Anoncoin network is maintained by decentralized miners who process transactions into blocks that are added to the public block chain. With the creation of each block, a specific amount of anoncoin is created that is rewarded to the miner. The difficulty of the scrypt proof-of-work algorithm is adjusted to ensure that a block is created about every 3 minutes.</p>
-                            
-                    </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="/Download" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download wallet
-                    </a>
-                </div>
+<!-- About Section -->
+<section class="success" id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>About</h2>
+                <hr class="star-two">
             </div>
         </div>
-    </section>
+        <div class="row">
+            <div class="col-lg-4 col-lg-offset-2">
+                <p>Anoncoin (trading symbol ANC) is a digital cryptocurrency that focuses on privacy and anonymity for its users.
+                    Created in June 2013, it is the first (and currently only) coin that provides built in support for the
+                    I2P darknet that makes it impossible to determine the IP address of the user. Anoncoin also has built
+                    in support of Tor, which can help conceal your location and keep your internet traffic private.
+                </p>
+
+            </div>
+            <div class="col-lg-4">
+                <p>
+                    The Anoncoin network is maintained by decentralized miners who process transactions into blocks that are added to the public
+                    block chain. With the creation of each block, a specific amount of anoncoin is created that is rewarded
+                    to the miner. The difficulty of the scrypt proof-of-work algorithm is adjusted to ensure that a block
+                    is created about every 3 minutes.</p>
+
+                </p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <a href="/Download" class="btn btn-lg btn-outline">
+                    <i class="fa fa-download"></i> Download wallet
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
