--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,18 +1,15 @@
- <!-- jQuery Version 1.11.0 -->
-    <script src="{{ "/js/jquery-1.11.0.js" }}"></script>
+<!-- jQuery Version 1.11.0 -->
+<script src="{{ " /js/jquery-1.11.0.js " }}"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="{{ "/js/bootstrap.min.js" }}"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="{{ " /js/bootstrap.min.js " }}"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="{{ "/js/jquery.easing.min.js" }}"></script>
-    <script src="{{ "/js/classie.js" }}"></script>
-    <script src="{{ "/js/cbpAnimatedHeader.js" }}"></script>
+<!-- Plugin JavaScript -->
+<script src="{{ " /js/jquery.easing.min.js " }}"></script>
+<script src="{{ " /js/classie.js " }}"></script>
+<script src="{{ " /js/cbpAnimatedHeader.js " }}"></script>
 
-    <!-- Custom Theme JavaScript -->
-    <script src="{{ "/js/freelancer.js" }}"></script>
-
-    {% if site.contact == "disqus" %}
-    <!-- Disqus Stuff -->
-    {% include js_disqus.html %}
-    {% endif %}
+<!-- Custom Theme JavaScript -->
+<script src="{{ " /js/freelancer.js " }}"></script> {% if site.contact == "disqus" %}
+<!-- Disqus Stuff -->
+{% include js_disqus.html %} {% endif %}
