Small changes to about page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
                 <p>Anoncoin (trading symbol ANC) is a digital cryptocurrency that focuses on privacy and anonymity for its users.
-                    Created in June 2013, it is the first (and currently only) coin that provides built in support for the
+                    Created in June 2013, it was the first coin that provided built in support for the
                     I2P darknet that makes it impossible to determine the IP address of the user. Anoncoin also has built
                     in support of Tor, which can help conceal your location and keep your internet traffic private.
                 </p>
