--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -222,6 +222,8 @@ section.success {
     }
 }
 
+img {max-width:100%; height:auto
+
 .btn-outline {
     margin-top: 15px;
     border: solid 2px #fff;
