Update social media

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -222,7 +222,7 @@ section.success {
     }
 }
 
-img {max-width:100%; height:auto
+img {max-width:100%; height:auto}
 
 .btn-outline {
     margin-top: 15px;
