--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,8 +29,10 @@
                 <div class="footer-col col-md-4">
                     <h3>{{ site.footer.credits }}</h3>
                     <p>
-                        {% for credits in site.credits %} {{ credits.line }}
-                        <br> {% endfor %}
+                            <a href="https://join.slack.com/t/anoncoin/shared_invite/enQtMjU3Njk3MjE3MjM1LTAwZjU5ZmEzYTc0ZTg3ZDkxMGYyY2NlNWFkZGVmOTg1MGJlNTIzOTIxZDQ1YjI4NjFkM2NkZjU5Zjg1YzQ2OTQ
+                            " class="btn btn-lg btn-outline">
+                                <i class="fa fa-slack"></i> Join our Slack
+                            </a>
                     </p>
                 </div>
             </div>
