--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,17 +11,14 @@
             <div class="col-lg-4 col-lg-offset-2">
                 <p>Anoncoin (trading symbol ANC) is a digital cryptocurrency that focuses on privacy and anonymity for its users.
                     Created in June 2013, it was the first coin that provided built in support for the
-                    I2P darknet that makes it impossible to determine the IP address of the user. Anoncoin also has built
-                    in support of Tor, which can help conceal your location and keep your internet traffic private.
+                    I2P darknet that makes it impossible to determine the IP address of the user. 
                 </p>
 
             </div>
             <div class="col-lg-4">
                 <p>
-                    The Anoncoin network is maintained by decentralized miners who process transactions into blocks that are added to the public
-                    block chain. With the creation of each block, a specific amount of anoncoin is created that is rewarded
-                    to the miner. The difficulty of the scrypt proof-of-work algorithm is adjusted to ensure that a block
-                    is created about every 3 minutes.</p>
+                    Anoncoin also has built in support of Tor, which can help conceal your location and keep your internet traffic private. 
+                    Download our wallet and get started today.</p>
 
                 </p>
             </div>
