--- a/_includes/about.html
+++ b/_includes/about.html
@@ -24,7 +24,11 @@
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <a href="/Download" class="btn btn-lg btn-outline">
-                    <i class="fa fa-download"></i> Download wallet
+                    <i class="fa fa-download">&nbsp;</i>Download wallet
+                </a>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="/Exchanges" class="btn btn-lg btn-outline">
+                    <i class="fa fa-download">&nbsp;</i>Buy Anoncoins (ANC)
                 </a>
             </div>
         </div>
