--- a/_includes/about.html
+++ b/_includes/about.html
@@ -28,7 +28,7 @@
                 </a>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="/Exchanges" class="btn btn-lg btn-outline">
-                    <i class="fa fa-download">&nbsp;</i>Buy Anoncoins (ANC)
+                    <i class="fa fa-money">&nbsp;</i>Buy Anoncoins
                 </a>
             </div>
         </div>
