--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-dropping">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -13,7 +13,7 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <nav id="navbar" class="collapse navbar-collapse">
+        <nav id="navbar-dropping" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 {% assign links = site.data.navigation %} {% for link in links %} {% assign class = nil %} {% if page.url contains link.url
                 %} {% assign class = 'active' %} {% endif %} {% if link.sublinks %}
