Check and fix all links to moved pages

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -23,11 +23,11 @@
                 </p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="/Download" class="btn btn-lg btn-outline">
+                <a href="/Download/" class="btn btn-lg btn-outline">
                     <i class="fa fa-download">&nbsp;</i>Download wallet
                 </a>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="/Exchanges" class="btn btn-lg btn-outline">
+                <a href="/Exchanges/" class="btn btn-lg btn-outline">
                     <i class="fa fa-money">&nbsp;</i>Buy Anoncoins
                 </a>
             </div>
