--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,36 +1,31 @@
 <!-- About Section -->
 <section class="success" id="about">
     <div class="container">
-        <div class="row">
+    <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>About</h2>
+                <h2>Anoncoin 0.9.7 released July 13, 2018!</h2>
                 <hr class="star-two">
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-4 col-lg-offset-2">
-                <p>Anoncoin (trading symbol ANC) is a digital cryptocurrency that focuses on privacy and anonymity for its users.
-                    Created in June 2013, it was the first coin that provided built in support for the
-                    I2P darknet that makes it impossible to determine the IP address of the user. 
-                </p>
+            <div class="col-lg-12">
+                    <p>
+                            The Anoncoin team is proud to announce the official release of Anoncoin 0.9.7. This release is set to hardfork at block 871111. This is a first step on the way for the release of Anoncash later this year. 
+                            You can <a href="https://github.com/Anoncoin/anoncoin/releases/tag/v0.9.7-gost">find the release on Github here.</a>
+                    </p>
+                </div>
 
-            </div>
-            <div class="col-lg-4">
-                <p>
-                    Anoncoin also has built in support of Tor, which can help conceal your location and keep your internet traffic private. 
-                    Download our wallet and get started today.</p>
 
-                </p>
-            </div>
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="/Download/" class="btn btn-lg btn-outline">
-                    <i class="fa fa-download">&nbsp;</i>Download wallet
-                </a>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="/Exchanges/" class="btn btn-lg btn-outline">
-                    <i class="fa fa-money">&nbsp;</i>Buy Anoncoins
-                </a>
-            </div>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                        <a href="/Download/" class="btn btn-lg btn-outline">
+                            <i class="fa fa-download">&nbsp;</i>Download wallet
+                        </a>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a href="/Exchanges/" class="btn btn-lg btn-outline">
+                            <i class="fa fa-money">&nbsp;</i>Buy Anoncoins
+                        </a>
+                    </div>
+            
+
         </div>
     </div>
 </section>
