Update website with new release

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,14 +3,14 @@
     <div class="container">
     <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Anoncoin 0.9.7 released July 13, 2018!</h2>
+                <h2>Anoncoin 0.9.7.1 released October 23, 2018!</h2>
                 <hr class="star-two">
             </div>
         </div>
             <div class="col-lg-12">
                     <p>
-                            The Anoncoin team is proud to announce the official release of Anoncoin 0.9.7. This release is set to hardfork at block 871111. This is a first step on the way for the release of Anoncash later this year. 
-                            You can <a href="https://github.com/Anoncoin/anoncoin/releases/tag/v0.9.7-gost">find the release on Github here.</a>
+                            The Anoncoin team is proud to announce the official release of Anoncoin 0.9.7.1. 
+                            You can <a href="https://github.com/Anoncoin/anoncoin/releases/tag/v0.9.7.1">find the release on Github here.</a>
                     </p>
                 </div>
 
